deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-demo-deployment
  namespace: web-demo
  labels:
    app: web-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-demo
  template:
    metadata:
      labels:
        app: web-demo
    spec:
      containers:
      - name: web-demo
        image: yaozhongzyz/demo:0.0.1
        imagePullPolicy: Always
        args: ["-c", "/etc/config/my.conf"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
      volumes:
      - name: config-volume
        configMap:
          name: myconfig
