service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-demo
  name: web-demo
  namespace: web-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-demo
  type: Nodeport
