ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-demo-ingress
  namespace: web-demo
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`demo.example.com`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: web-demo
      namespace: web-demo
      passHostHeader: true
      port: 80
      scheme: http
